--- a/design/src/main/res/layout/adapter_profile.xml
+++ b/design/src/main/res/layout/adapter_profile.xml
@@ -78,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/item_text_margin"
                 android:max="100"
-                android:progress="@{(profile.moreInfo.uploadBase + profile.moreInfo.downloadBase) == 0 ? 0 : (int)(profile.moreInfo.totalBase / (profile.moreInfo.uploadBase + profile.moreInfo.downloadBase))}" />
+                android:progress="@{profile.moreInfo.totalBase == 0 ? 0 : I18nKt.progress(profile.moreInfo.uploadBase,profile.moreInfo.downloadBase)}" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
